test/es6/openfl/errors/IOErrorTest.js
import IOError from "openfl/errors/IOError";
var assert = chai.assert;


describe ("ES6 | IOError", function () {
	
	
	it ("new", function () {
		
		// TODO: Confirm functionality
		
		var ioError = new IOError ();
		assert.notEqual (ioError, null);
		
	});
	
	
});